<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TitleFragment"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_btn_text" />

    <Button
        android:id="@+id/quiz_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_quiz_btn_text" />
    <Button
        android:id="@+id/record_sleep_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_sleep_text" />
    <Button
        android:id="@+id/real_estate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real_estate_btn_txt" />
    <Button
        android:id="@+id/dev_byte_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dev_byte_videos" />
</LinearLayout>
</layout>